@@ -2,6 +2,8 @@ Version 2.1.6 -
 ----------------------------------
 Core - General
   - Now attempt to detect if a template name passed into CmsModule::GetTemplateResource() is already a resource string.
+  - endswith is now an accepted function in smarty templates (fixes typo in security policy)
+  - Fixes for CmsNlsOperations when using a language detector
 
 Content Manager v1.1.3
   - Fix bulk set-non-cachable functionality.
